Fixed the way the Python Codegen handles Enum names using the "x-enum-varnames" marker and the x-enum-descriptions are handled.
Previously the enums would be generated with generic "NUMBER_1" names.

--- a/modules/openapi-generator/src/main/resources/python/model_enum.mustache
+++ b/modules/openapi-generator/src/main/resources/python/model_enum.mustache
@@ -17,6 +17,12 @@ class {{classname}}({{vendorExtensions.x-py-enum-type}}, Enum):
     """
 {{#allowableValues}}
     {{#enumVars}}
+    {{#enumDescription}}
+    
+    """
+    {{.}}
+    """
+    {{/enumDescription}}
     {{{name}}} = {{{value}}}
     {{/enumVars}}
 
